# gigGizmo

./: .clang-format  .gitmodules  CMakeLists.txt
css/: CMakeLists.txt  baseStyle.css
include/: band.hpp  bootstrap.hpp  error.hpp  gig.hpp  index.hpp  login.hpp  navbar.hpp  register.hpp  session.hpp  template.hpp  upload.hpp  user.hpp  utility.hpp  venue.hpp
js/: bandList.js  croppieCallback.js  gigCreate.js  gigList.js  loginCallback.js  quill.min.js  quillCallback.js  unixTime.js  uploadList.js  venueIndex.js  venueList.js
src/: band.cpp  bootstrap.cpp  error.cpp  gig.cpp  main.cpp  navbar.cpp  session.cpp  template.cpp  upload.cpp  user.cpp  utility.cpp  venue.cpp
src/routes/: index.cpp
src/routes/band/: create.cpp  find.cpp  index.cpp  list.cpp  options.cpp
src/routes/gig/: create.cpp  find.cpp  index.cpp  list.cpp  options.cpp
src/routes/upload/: find.cpp  index.cpp  list.cpp  options.cpp
src/routes/user/: home.cpp  login.cpp  options.cpp  register.cpp
src/routes/venue/: create.cpp  find.cpp  index.cpp  list.cpp  options.cpp
